--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
   // ======= LÓGICA FREE VS PREMIUM =======
   (function(){
-    const plano = "free"; // altere para "premium" quando necessário
+    const plano = "premium"; // altere para "premium" quando necessário
     const select = (sel) => document.querySelector(sel);
     const remove = (sel) => { const el=select(sel); if(el) el.remove(); };
 
@@ -566,3 +566,4 @@
   </script>
 </body>
 </html>
+
