--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0f172a">
   <style>
-    /* === CSS ORIGINAL === */
     :root {
       --bg: #3f3f3f;
       --card: #5c5c5c;
@@ -149,18 +148,393 @@
       <nav id="tabs"></nav>
     </div>
   </header>
+  <main>
+    <!-- DASHBOARD -->
+    <section id="tab-dashboard" class="tab card" hidden>
+      <h2>📊 Dashboard</h2>
+      <div class="grid cols-3">
+        <div class="card">
+          <div class="muted">Saldo previsto</div>
+          <div class="kpi" id="kpiSaldo">R$ 0,00</div>
+          <div class="note">Entradas</div>
+        </div>
+        <div class="card">
+          <div class="muted">Próximo vencimento</div>
+          <div class="kpi" id="kpiVencimento">—</div>
+          <div class="note">Despesas e cartões mais próximos</div>
+        </div>
+        <div class="card">
+          <div class="muted">Sobra</div>
+          <div class="kpi" id="kpiSobra">R$ 0,00</div>
+          <div class="note">Saldo após todas as despesas</div>
+        </div>
+        <!-- Card: Soma por tipos -->
+        <div class="card" id="cardSomaTipos">
+          <div class="muted">Soma por tipo</div>
+          <select id="filtroDespesa" style="width:100%;margin-bottom:6px"></select>
+          <div class="row-inline">
+            <label for="chk6meses">Somar últimos 6 meses</label>
+            <input type="checkbox" id="chk6meses">
+          </div>
+          <div class="kpi" id="kpiSomaTipo">R$ 0,00</div>
+          <div class="note">Baseado no filtro</div>
+        </div>
+      </div>
+    </section>
 
-  <!-- === SEÇÕES ORIGINAIS (Dashboard, Renda, Despesas, Cartões, Config Dados) === -->
-  <!-- (Aqui mantém exatamente como estava no seu index.html original) -->
+    <!-- RENDA -->
+    <section id="tab-renda" class="tab card" hidden>
+      <h2>💵 Renda</h2>
+      <div class="row">
+        <div class="grow"><label>Descrição</label><input id="rendaNome" placeholder="Salário, Extra..."></div>
+        <div class="grow"><label>Valor</label><input id="rendaValor" type="number" step="0.01"></div>
+        <div class="grow"><label>Data</label><input id="rendaData" type="date"></div>
+        <div class="row-inline" id="boxRendaRec">
+          <label for="rendaRecorrente">Recorrente</label>
+          <select id="rendaRecorrente">
+            <option value="0">Não</option>
+            <option value="1">1 mês</option>
+            <option value="2">2 meses</option>
+            <option value="3">3 meses</option>
+            <option value="4">4 meses</option>
+            <option value="5">5 meses</option>
+            <option value="6">6 meses</option>
+            <option value="7">7 meses</option>
+            <option value="8">8 meses</option>
+            <option value="9">9 meses</option>
+            <option value="10">10 meses</option>
+            <option value="11">11 meses</option>
+            <option value="12">12 meses</option>
+          </select>
+        </div>
+        <button id="btnAddRenda" class="btn">Adicionar</button>
+      </div>
+      <div class="space-top">
+        <table id="tblRenda">
+          <thead>
+            <tr><th>Descrição</th><th>Data</th><th class="right">Valor</th><th></th></tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
 
+    <!-- DESPESAS -->
+    <section id="tab-despesas" class="tab card" hidden>
+      <h2>📌 Despesas</h2>
+      <div class="row">
+        <div class="grow"><label>Descrição</label><input id="despNome"></div>
+        <div class="grow"><label>Valor</label><input id="despValor" type="number" step="0.01"></div>
+        <div class="grow"><label>Data vencimento</label><input id="despData" type="date"></div>
+        <div class="grow"><label>Tipo</label>
+          <select id="despTipo"></select>
+        </div>
+        <div class="row-inline">
+          <input id="novoTipo" placeholder="Novo tipo" style="width:120px">
+          <button id="btnAddTipo" class="btn ghost">+</button>
+        </div>
+        <div class="row-inline" id="boxDespRec">
+          <label for="despRecorrente">Recorrente</label>
+          <select id="despRecorrente">
+            <option value="0">Não</option>
+            <option value="1">1 mês</option>
+            <option value="2">2 meses</option>
+            <option value="3">3 meses</option>
+            <option value="4">4 meses</option>
+            <option value="5">5 meses</option>
+            <option value="6">6 meses</option>
+            <option value="7">7 meses</option>
+            <option value="8">8 meses</option>
+            <option value="9">9 meses</option>
+            <option value="10">10 meses</option>
+            <option value="11">11 meses</option>
+            <option value="12">12 meses</option>
+          </select>
+        </div>
+        <button id="btnAddDesp" class="btn">Adicionar</button>
+      </div>
+      <div class="space-top table-container">
+        <table id="tblDesp">
+          <thead>
+            <tr>
+              <th>Descrição</th>
+              <th>Data</th>
+              <th>Tipo</th>
+              <th class="right">Valor</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- CARTÕES -->
+    <section id="tab-cartoes" class="tab card" hidden>
+      <h2>💳 Cartões</h2>
+      <div class="row">
+        <div class="grow"><label>Cartão</label><input id="ccNome"></div>
+        <div class="grow"><label>Vencimento</label><input id="ccVenc" type="date"></div>
+        <div class="grow"><label>Valor usado</label><input id="ccValor" type="number" step="0.01"></div>
+        <button id="btnAddCC" class="btn">Adicionar</button>
+      </div>
+      <div class="space-top">
+        <table id="tblCC">
+          <thead>
+            <tr><th>Cartão</th><th>Vencimento</th><th class="right">Valor usado</th><th></th></tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
+
+    <!-- Config Dados -->
+    <section id="tab-relatorios" class="tab card" hidden>
+      <h2>📅 Config Dados</h2>
+      <div id="listaReservas"></div>
+      <div class="space-top">
+        <button id="btnReset" class="btn danger">Limpar dados</button>
+        <div class="note">Dados salvos no seu dispositivo (localStorage)</div>
+      </div>
+    </section>
+  </main>
   <script>
-  // ... (todo seu JS original igual estava, funções de render etc.)
+  // ======= FUNÇÕES GERAIS =======
+  const fmtBRL = (n) => (n||0).toLocaleString('pt-BR',{style:'currency',currency:'BRL'});
+  const parseN = (v) => Number(String(v).replace(',','.'))||0;
+  const today = () => new Date();
+  const getPeriod = (d) => {
+    const date=new Date(d||today());
+    return date.getFullYear()+"-"+String(date.getMonth()+1).padStart(2,'0');
+  };
 
-  // ======= LÓGICA FREE VS PREMIUM VIA URL =======
+  let state = JSON.parse(localStorage.getItem('fin-state')||'{}');
+  if(!state.periodos) state={periodos:{},tipos:["Moradia","Transporte","Alimentação","Saúde","Serviços","Educação","Outros"]};
+  let currentPeriod;
+
+  function ensurePeriod(p){
+    if(!state.periodos[p]) state.periodos[p]={rendas:[],despesas:[],cartoes:[]};
+  }
+  function save(){ localStorage.setItem('fin-state',JSON.stringify(state)); renderAll(); }
+
+  // ======= PERIODOS =======
+  function renderPeriods(){
+    const sel=document.getElementById('periodSelect'); sel.innerHTML="";
+    const ps=Object.keys(state.periodos).sort();
+    ps.forEach(p=>{
+      const opt=document.createElement('option');
+      opt.value=p; opt.textContent=p; sel.appendChild(opt);
+    });
+    if(!currentPeriod){currentPeriod=getPeriod(); ensurePeriod(currentPeriod);}
+    if(!ps.includes(currentPeriod)){ensurePeriod(currentPeriod);}
+    sel.value=currentPeriod;
+    sel.onchange=()=>{currentPeriod=sel.value; renderAll();};
+  }
+
+  // ======= RENDAS =======
+  document.getElementById('btnAddRenda').onclick=()=>{
+    const nome=document.getElementById('rendaNome').value.trim();
+    const valor=parseN(document.getElementById('rendaValor').value);
+    const data=document.getElementById('rendaData').value;
+    const meses=parseInt(document.getElementById('rendaRecorrente').value);
+    if(!nome||!valor||!data){alert("Preencha os campos");return;}
+
+    const p=getPeriod(data);
+    ensurePeriod(p);
+    state.periodos[p].rendas.push({id:Date.now(),nome,valor,data,recorrente:meses>0});
+    currentPeriod=p;
+
+    if(meses>0){
+      for(let i=1;i<meses;i++){
+        let d=new Date(data); d.setMonth(d.getMonth()+i);
+        const pi=getPeriod(d);
+        ensurePeriod(pi);
+        state.periodos[pi].rendas.push({id:Date.now()+i,nome,valor,data:d.toISOString(),recorrente:true});
+      }
+    }
+
+    document.getElementById('rendaNome').value="";
+    document.getElementById('rendaValor').value="";
+    document.getElementById('rendaData').value="";
+    document.getElementById('rendaRecorrente').value="0";
+    save();
+  };
+  function renderRenda(){
+    ensurePeriod(currentPeriod);
+    const tb=document.querySelector('#tblRenda tbody'); tb.innerHTML="";
+    state.periodos[currentPeriod].rendas.forEach(r=>{
+      const tr=document.createElement('tr');
+      tr.innerHTML=`<td>${r.nome}</td><td>${new Date(r.data).toLocaleDateString()}</td><td class="right">${fmtBRL(r.valor)}</td><td><button class="btn ghost">X</button></td>`;
+      tr.querySelector('button').onclick=()=>{state.periodos[currentPeriod].rendas=state.periodos[currentPeriod].rendas.filter(x=>x.id!==r.id); save();};
+      tb.appendChild(tr);
+    });
+  }
+
+  // ======= TIPOS DESPESAS =======
+  function renderTipos(){
+    const sel=document.getElementById('despTipo'); sel.innerHTML="";
+    state.tipos.forEach(t=>{const o=document.createElement('option'); o.textContent=t; sel.appendChild(o);});
+  }
+  document.getElementById('btnAddTipo').onclick=()=>{
+    const v=document.getElementById('novoTipo').value.trim();
+    if(v){state.tipos.push(v); document.getElementById('novoTipo').value=""; save();}
+  };
+
+  // ======= DESPESAS =======
+  document.getElementById('btnAddDesp').onclick=()=>{
+    const nome=document.getElementById('despNome').value.trim();
+    const valor=parseN(document.getElementById('despValor').value);
+    const data=document.getElementById('despData').value;
+    const tipo=document.getElementById('despTipo').value;
+    const meses=parseInt(document.getElementById('despRecorrente').value);
+    if(!nome||!valor||!data){alert("Preencha os campos");return;}
+
+    const p=getPeriod(data);
+    ensurePeriod(p);
+    state.periodos[p].despesas.push({id:Date.now(),nome,valor,data,tipo,recorrente:meses>0});
+    currentPeriod=p;
+
+    if(meses>0){
+      for(let i=1;i<meses;i++){
+        let d=new Date(data); d.setMonth(d.getMonth()+i);
+        const pi=getPeriod(d);
+        ensurePeriod(pi);
+        state.periodos[pi].despesas.push({id:Date.now()+i,nome,valor,data:d.toISOString(),tipo,recorrente:true});
+      }
+    }
+
+    document.getElementById('despNome').value="";
+    document.getElementById('despValor').value="";
+    document.getElementById('despData').value="";
+    document.getElementById('despRecorrente').value="0";
+    save();
+  };
+  function renderDesp(){
+    ensurePeriod(currentPeriod);
+    const tb=document.querySelector('#tblDesp tbody'); tb.innerHTML="";
+    state.periodos[currentPeriod].despesas.forEach(d=>{
+      const tr=document.createElement('tr');
+      tr.innerHTML=`<td>${d.nome}</td><td>${new Date(d.data).toLocaleDateString()}</td><td>${d.tipo}</td><td class="right">${fmtBRL(d.valor)}</td><td><button class="btn ghost">X</button></td>`;
+      tr.querySelector('button').onclick=()=>{state.periodos[currentPeriod].despesas=state.periodos[currentPeriod].despesas.filter(x=>x.id!==d.id); save();};
+      tb.appendChild(tr);
+    });
+  }
+
+  // ======= CARTÕES =======
+  document.getElementById('btnAddCC').onclick=()=>{
+    const nome=document.getElementById('ccNome').value.trim();
+    const valor=parseN(document.getElementById('ccValor').value);
+    const venc=document.getElementById('ccVenc').value;
+    if(!nome||!valor||!venc){alert("Preencha os campos");return;}
+    const p=getPeriod(venc);
+    ensurePeriod(p);
+    state.periodos[p].cartoes.push({id:Date.now(),nome,valor,venc});
+    currentPeriod=p;
+    document.getElementById('ccNome').value="";
+    document.getElementById('ccValor').value="";
+    document.getElementById('ccVenc').value="";
+    save();
+  };
+  function renderCC(){
+    ensurePeriod(currentPeriod);
+    const tb=document.querySelector('#tblCC tbody'); tb.innerHTML="";
+    state.periodos[currentPeriod].cartoes.forEach(c=>{
+      const tr=document.createElement('tr');
+      tr.innerHTML=`<td>${c.nome}</td><td>${new Date(c.venc).toLocaleDateString()}</td><td class="right">${fmtBRL(c.valor)}</td><td><button class="btn ghost">X</button></td>`;
+      tr.querySelector('button').onclick=()=>{state.periodos[currentPeriod].cartoes=state.periodos[currentPeriod].cartoes.filter(x=>x.id!==c.id); save();};
+      tb.appendChild(tr);
+    });
+  }
+
+  // ======= DASHBOARD =======
+  function renderDashboard(){
+    ensurePeriod(currentPeriod);
+    const rendas=state.periodos[currentPeriod].rendas||[];
+    const despesas=state.periodos[currentPeriod].despesas||[];
+    const cartoes=state.periodos[currentPeriod].cartoes||[];
+    const totalR=rendas.reduce((s,x)=>s+x.valor,0);
+    const totalD=despesas.reduce((s,x)=>s+x.valor,0);
+    const totalC=cartoes.reduce((s,x)=>s+x.valor,0);
+    const saldo=totalR;
+    document.getElementById('kpiSaldo').textContent=fmtBRL(saldo);
+    document.getElementById('kpiSobra').textContent=fmtBRL(saldo-totalD-totalC);
+
+    const eventos=[...despesas.map(d=>({data:d.data,nome:d.nome})),...cartoes.map(c=>({data:c.venc,nome:c.nome}))];
+    const futuros=eventos.filter(e=>new Date(e.data)>=today());
+    futuros.sort((a,b)=>new Date(a.data)-new Date(b.data));
+    document.getElementById('kpiVencimento').textContent=futuros.length? new Date(futuros[0].data).toLocaleDateString()+" - "+futuros[0].nome:"—";
+
+    renderSomaTipo();
+  }
+
+  // ======= Dashboard: Soma por tipos =======
+  function renderSomaTipo(){
+    const filtro = document.getElementById("filtroDespesa").value;
+    const ult6 = document.getElementById("chk6meses").checked;
+
+    let despesas = [];
+    if(ult6){
+      let base=new Date();
+      for(let i=0;i<6;i++){
+        let p=getPeriod(new Date(base.getFullYear(), base.getMonth()-i, 1));
+        if(state.periodos[p]) despesas = despesas.concat(state.periodos[p].despesas);
+      }
+    } else {
+      ensurePeriod(currentPeriod);
+      despesas = state.periodos[currentPeriod].despesas;
+    }
+
+    const tiposUsados = [...new Set(despesas.map(d=>d.tipo))];
+    const sel=document.getElementById("filtroDespesa");
+    sel.innerHTML='<option value="">Todos</option>';
+    tiposUsados.forEach(t=>{
+      const o=document.createElement("option");
+      o.value=t; o.textContent=t;
+      if(t===filtro) o.selected=true;
+      sel.appendChild(o);
+    });
+
+    let filtradas = filtro ? despesas.filter(d=>d.tipo===filtro) : despesas;
+    const total = filtradas.reduce((s,d)=>s+d.valor,0);
+    document.getElementById("kpiSomaTipo").textContent = fmtBRL(total);
+  }
+  document.getElementById("filtroDespesa").onchange=renderSomaTipo;
+  document.getElementById("chk6meses").onchange=renderSomaTipo;
+
+  // ======= Config Dados =======
+  document.getElementById('btnReset').onclick=()=>{ if(confirm("Apagar todos os dados?")){localStorage.removeItem('fin-state'); location.reload();} };
+
+  // ======= TABS =======
+  const tabNames=[["dashboard","Dashboard"],["renda","Renda"],["despesas","Despesas"],["cartoes","Cartões"],["relatorios","Config Dados"]];
+  function renderTabs(){
+    const nav=document.getElementById('tabs'); nav.innerHTML="";
+    tabNames.forEach(([id,label],i)=>{
+      const b=document.createElement('button'); b.textContent=label; if(i==0) b.classList.add('active');
+      b.onclick=()=>{document.querySelectorAll('.tab').forEach(t=>t.hidden=true); document.getElementById('tab-'+id).hidden=false; document.querySelectorAll('nav button').forEach(x=>x.classList.remove('active')); b.classList.add('active');};
+      nav.appendChild(b);
+    });
+    document.getElementById('tab-dashboard').hidden=false;
+  }
+
+  // ======= TEMA (claro/escuro) =======
+  const themeToggle=document.getElementById('themeToggle');
+  const themeIcon=document.getElementById('themeIcon');
+  function applyTheme(){
+    if(localStorage.getItem('theme')==='light'){
+      document.body.classList.add('light');
+      themeToggle.checked=false;
+      themeIcon.textContent='🌞';
+    } else {
+      document.body.classList.remove('light');
+      themeToggle.checked=true;
+      themeIcon.textContent='🌙';
+    }
+  }
+  themeToggle.onchange=()=>{localStorage.setItem('theme', themeToggle.checked?'dark':'light'); applyTheme();};
+
+  // ======= LÓGICA FREE VS PREMIUM =======
   (function(){
-    const urlParams = new URLSearchParams(window.location.search);
-    const plano = urlParams.get("plano") || "free"; // padrão free se não passar nada
-
+    const plano = "free"; // altere para "premium" quando necessário
     const select = (sel) => document.querySelector(sel);
     const remove = (sel) => { const el=select(sel); if(el) el.remove(); };
 
@@ -183,6 +557,12 @@
   renderTabs();
   applyTheme();
   renderAll();
+  </script>
+  <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+      .then(() => console.log("Service Worker registrado"));
+  }
   </script>
 </body>
 </html>
