--- a/index.html
+++ b/index.html
@@ -554,6 +554,16 @@
   })();
 
   // ======= RENDER ALL =======
+  function renderAll(){
+  renderPeriods();
+  renderRenda();
+  renderTipos();
+  renderDesp();
+  renderCC();
+  renderDashboard();
+  }
+  
+  
   renderTabs();
   applyTheme();
   renderAll();
@@ -566,3 +576,4 @@
   </script>
 </body>
 </html>
+
